--- a/01-intro-to-lambda/001-hello-lambda/package.json
+++ b/01-intro-to-lambda/001-hello-lambda/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Hello World as a Lambda function",
   "engines": {
-    "node": "4.2.2"
+    "node": "6.9.2"
   },
   "repository": {
     "type": "git",
@@ -15,14 +15,7 @@
     "email": "sergio.f.gonzalez@gmail.com"
   },
   "license": "ISC",
-  "devDependencies": {
-    "grunt": "0.4.5",
-    "grunt-contrib-clean": "0.7.0",
-    "grunt-contrib-compress": "1.0.0",
-    "grunt-contrib-copy": "0.8.2",
-    "grunt-contrib-jshint": "0.11.3",
-    "grunt-contrib-watch": "0.6.1",
-    "jshint-stylish": "2.1.0"
-  },
+  "devDependencies": {},
   "dependencies": {}
 }
+rm
