--- a/01-intro-to-lambda/000-template-project/package.json
+++ b/01-intro-to-lambda/000-template-project/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {},
   "dependencies": {},
   "config" : { 
-    "dist" : "./dist" 
+    "dist" : "dist" 
   },
   "scripts": {
     "start": "node build/$npm_package_main",
