--- a/01-intro-to-lambda/001-hello-lambda/package.json
+++ b/01-intro-to-lambda/001-hello-lambda/package.json
@@ -1,7 +1,8 @@
 {
   "name": "001-hello-lambda",
   "version": "0.0.0",
-  "description": "Hello World as a Lambda function",
+  "description": "The simplest lambda function",
+  "main": "index.js",
   "engines": {
     "node": "6.9.2"
   },
@@ -13,9 +14,27 @@
   "author": {
     "name": "Sergio F. Gonzalez",
     "email": "sergio.f.gonzalez@gmail.com"
-  },
+  },  
   "license": "ISC",
   "devDependencies": {},
-  "dependencies": {}
+  "dependencies": {},
+  "config" : { 
+    "dist" : "dist" 
+  },
+  "scripts": {
+    "start": "node build/$npm_package_main",
+    "lint": "eslint public/src/",
+    "clean:local": "rm -rf build/",
+    "clean:dist": "rm -rf $npm_package_config_dist/",
+    "clean": "npm run clean:local && npm run clean:dist",
+    "build:local": "npm run lint",
+    "prebuild:local": "npm run clean",
+    "postbuild:local": "cp -r public/src/ build/",
+    "debug": "node --inspect --debug-brk build/index.js",
+    "dev": "nodemon --ext js,json,yml --watch public/src --watch .eslintrc.yml --exec 'npm run build && npm start'",
+    "prebuild:dist": "mkdir -p $npm_package_config_dist",
+    "build:dist": "npm run lint",
+    "postbuild:dist": "cd public/src && zip --verbose --recurse-paths --filesync $npm_package_config_dist/$npm_package_name-$npm_package_version.zip *",
+    "test": "echo $npm_package_config_dist"
+  }  
 }
-rm
