Fix incorrect npm run dev command

--- a/01-intro-to-lambda/004-invoking-lambda-from-nodejs/package.json
+++ b/01-intro-to-lambda/004-invoking-lambda-from-nodejs/package.json
@@ -28,6 +28,6 @@
     "prebuild": "npm run clean",
     "postbuild": "cp -r public/src/ build/",
     "debug": "node --inspect --debug-brk build/index.js",
-    "dev": "nodemon --ext js,json,yml --watch public/src --watch .eslintrc.yml --exec 'npm run build && npm start'"
+    "dev": "nodemon --ext js,json,yml --watch public/src --watch .eslintrc.yml --exec 'npm run build:local && npm start'"
   }
 }
