--- a/01-intro-to-lambda/001-hello-lambda/package.json
+++ b/01-intro-to-lambda/001-hello-lambda/package.json
@@ -31,7 +31,7 @@
     "prebuild:local": "npm run clean",
     "postbuild:local": "cp -r public/src/ build/",
     "debug": "node --inspect --debug-brk build/index.js",
-    "dev": "nodemon --ext js,json,yml --watch public/src --watch .eslintrc.yml --exec 'npm run build && npm start'",
+    "dev": "nodemon --ext js,json,yml --watch public/src --watch .eslintrc.yml --exec 'npm run build:local && npm start'",
     "prebuild:dist": "mkdir -p $npm_package_config_dist",
     "build:dist": "npm run lint",
     "postbuild:dist": "cd public/src && zip --verbose --recurse-paths --filesync $npm_package_config_dist/$npm_package_name-$npm_package_version.zip *",
